--- a/index.html
+++ b/index.html
@@ -201,15 +201,15 @@
                 </p>
                 <div class="grille-photos">
                     <figure class="photo-carte">
-                        <img src="assets/img/ambiance-1.jpg" alt="Vue de la boutique Le Caféier">
+                        <img src="assets/img/ambiance-1.png" alt="Vue de la boutique Le Caféier">
                         <figcaption>Rayons thés & cafés</figcaption>
                     </figure>
                     <figure class="photo-carte">
-                        <img src="assets/img/ambiance-2.jpg" alt="Détail de la torréfaction">
+                        <img src="assets/img/ambiance-2.png" alt="Détail de la torréfaction">
                         <figcaption>Torréfaction artisanale</figcaption>
                     </figure>
                     <figure class="photo-carte">
-                        <img src="assets/img/ambiance-3.jpg" alt="Sélection déco & cadeaux">
+                        <img src="assets/img/ambiance-3.png" alt="Sélection déco & cadeaux">
                         <figcaption>Idées cadeaux & déco</figcaption>
                     </figure>
                 </div>
